<resources>
    <string name="app_name">Submission</string>
    <string name="signup">Daftar</string>
    <string name="message_welcome_page">Mau berbagi ilmu tentang Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding Story aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding Story!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk berbagi cerita?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="email">Email</string>
    <string name="check_email">Your email is invalid!</string>
    <string name="password">Password</string>
    <string name="check_password">Your password is invalid!</string>
    <string name="message_email">Input your email!</string>
    <string name="message_password">Input your password!</string>
    <string name="Lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
    <string name="logo">Logo</string>
    <string name="regis">Sign Up</string>
    <string name="noAccount">Dont Have an Account? </string>
    <string name="login">Login</string>
    <string name="haveAccount">Have an Account? </string>
    <string name="username">Username</string>
    <string name="not_found">Cannot find your story</string>
    <string name="add_story">Add Story</string>
    <string name="login_error">Your Email or Password is invalid</string>
    <string name="login_success">Login success</string>
    <string name="register_error">Registration failed, user already exists or email is invalid</string>
    <string name="register_success">Registration success</string>
    <string name="permissions">Not getting permission</string>
    <string name="story_validate">Please enter the image file or fill in the description first</string>
    <string name="story_success">Success added story</string>
    <string name="story_error">Added failed story</string>
    <string name="detail_story">Detail Story</string>
    <string name="judul_story">Judul Story</string>
    <string name="deskripsi_story">Deskripsi Story</string>
    <string name="hi_welcome_back">Hi, Welcome Back!</string>
    <string name="txtlogin">LOGIN</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="create_new_account">Create New Account</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="yeah">Yeah!</string>
    <string name="your_account_successfully_created">Your account successfully created!</string>
    <string name="next">Next</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="camera_x">Camera X</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="logout">Logout</string>
    <string name="selamat_datang">Selamat Datang %1$s</string>
    <string name="login_berhasil">Login Berhasil</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="story_notFound">Story not found</string>
    <string name="retry">Retry</string>
</resources>